--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html {
-    background-image: -moz-linear-gradient(#000000,#020b36);
+    background-image: linear-gradient(#000000,#020b36);
     background-repeat: no-repeat;
+    background-color: black;
     color:#e3e3ff;
     min-height: 100%;
     width: 100%;
@@ -49,5 +50,13 @@ h1 {
       border-color: #b3e3f4;
       border-style: solid;
       padding-top: 10px;
+      word-wrap: break-word;
+  }
+
+code {
+      white-space: pre-wrap;
+      white-space: -moz-pre-wrap;
+      white-space: -pre-wrap;
+      white-space: -o-pre-wrap;
       word-wrap: break-word;
   }
