--- a/style.css
+++ b/style.css
@@ -15,9 +15,8 @@ h1 {
 
 #wireRunner {
    display: block;
-    margin-left: 43%;
-    margin-right: 57%;
-    background-color: black;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .accordion {
