--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+/*midnight winter color palate*/
+
+
 html {
     background-image: linear-gradient(#000000,#020b36);
     background-repeat: no-repeat;
