--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
 html {
     background-image: linear-gradient(#000000,#020b36);
     background-repeat: no-repeat;
-    background-color: black;
     color:#e3e3ff;
     min-height: 100%;
     width: 100%;
@@ -12,8 +11,7 @@ html {
 
 h1 {
     text-align: center;
-    background-color: black;
-    text-shadow: 0 0 10px #fff, 0 0 20px #020b36, 0 0 30px #020b36, 0 0 40px #020b36;
+    text-shadow: 0 0 10px #fff, 0 0 20px #020bdd, 0 0 30px #020bee;
 }
 
 #wireRunner {
@@ -46,17 +44,13 @@ h1 {
     overflow: hidden;
   }
 
-  #codeBlocks {
+  .codeBlocks {
       background-color: #230745;
-      border-radius: 0.01px;
+      border-radius: 1px;
       border-color: #b3e3f4;
       border-style: solid;
-      padding-top: 10px;
       word-wrap: break-word;
-      margin-left: 0px;
       text-align: left;
-      padding-left: 0px;
-      justify-content: left;
-      white-space: pre-wrap;
       white-space: pre-line;
+      padding-left: 10px;
     }
