--- a/style.css
+++ b/style.css
@@ -36,6 +36,8 @@ h1 {
   .accordion:hover{
       background-color:#040d38;
       text-decoration: underline;
+      border-radius: 50px;
+      text-shadow: 0 0 20px #020bdd, 0 0 30px #020bee;
   }
 
   .panel {
@@ -53,4 +55,5 @@ h1 {
       text-align: left;
       white-space: pre-line;
       padding-left: 10px;
+      border-radius: 20px;
     }
