--- a/style.css
+++ b/style.css
@@ -36,8 +36,8 @@ h1 {
   .accordion:hover{
       background-color:#040d43;
       text-decoration: underline;
-      border-radius: 50px;
-      text-shadow: 0 0 20px #020bdd, 0 0 30px #020bee;
+      border-radius: 30px;
+      text-shadow: 0 0 5px #fff;
   }
 
   .panel {
@@ -55,5 +55,5 @@ h1 {
       text-align: left;
       white-space: pre-line;
       padding-left: 10px;
-      border-radius: 20px;
+      border-radius: 15px 0px 15px 0px;
     }
